--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,10 +5,10 @@
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>Color-Picker</name>
+    <name>颜色显示</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="support@yourcompany.com" url="https://www.yourcompany.com">YourCompany</vendor>
+    <vendor email="1559379562@qq.com" url="https://github.com/DFFXT/Color-Picker">gitHub开源地址</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
@@ -35,9 +35,16 @@
             <add-to-group group-id="BuildMenu" anchor="first"/>
             <keyboard-shortcut keymap="$default" first-keystroke="ctrl M"/>
         </action>
+        <!--icon="AllIcons.Actions.BuildLoadChanges"-->
         <action id="com.color.picker.editor.ColorTipsAction" class="com.color.picker.editor.ColorTipsAction"
-                text="color -tps" description="1111" icon="AllIcons.Actions.BuildLoadChanges">
+                text="color -tps" description="1111" icon="com.color.picker.editor.ColorIcon.icon">
             <add-to-group group-id="EditorPopupMenu" anchor="first"/>
         </action>
     </actions>
+    <applicationListeners>
+        <listener class="com.color.picker.app.ProjectListener" topic="com.intellij.openapi.project.ProjectManagerListener"/>
+    </applicationListeners>
+    <!--<extensions defaultExtensionNs="com.intellij">
+        <applicationService serviceImplementation=""
+    </extensions>-->
 </idea-plugin>
